Fix header overlap for tag pages and open dragonscale.ai in new tab

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -418,7 +418,7 @@
 
 .gh-pagehead {
     position: sticky;
-    top: 10vmin;
+    top: 11vmin;
     grid-column: wide-start/main-start;
     max-width: 200px;
     height: max-content;
